--- a/geonode/static/v2/rep_header_vector.html
+++ b/geonode/static/v2/rep_header_vector.html
@@ -33,7 +33,7 @@ body {
 #logo2 {
 /*	width: 280px;*/
 	height: 45px;
-	background: url(images/iMMAP.png) no-repeat 0 50%;
+	background: url(images/ANDMA.png) no-repeat 0 50%;
 	margin-right: 0px;
 	margin-left: -16px;
 	margin-top: 10px;
@@ -89,7 +89,7 @@ function dynvar() {
 <body onload="dynvar();">
 	<div class="head">
 		<div class="navbar-header">
-			<a id="logo"></a>
+			<!-- <a id="logo"></a> -->
 			<a id="logo2" class="navbar-brand-immap" ></a>
 			<div id="partner_logo"></div>
 		</div>
