--- a/geonode/static/v2/rep_header.html
+++ b/geonode/static/v2/rep_header.html
@@ -32,7 +32,7 @@ body {
 #logo2 {
   width: 280px;
   height: 55px;
-  background: url(images/iMMAP.png) no-repeat 0 50%;
+  background: url(images/ANDMA.png) no-repeat 0 50%;
   margin-right: 0px;
   margin-left: -16px;
   margin-top: 10px;
@@ -90,7 +90,7 @@ function dynvar() {
 <body onload="dynvar();">
   <div class="head">
     <div class="navbar-header">
-      <a id="logo"></a>
+      <!-- <a id="logo"></a> -->
       <a id="logo2" class="navbar-brand-immap" ><h1>AFGHANISTAN SPATIAL DATA CENTER</h1></a>
     </div>
     <div class="detail">
