--- a/geonode/static/rep_header_vector.html
+++ b/geonode/static/rep_header_vector.html
@@ -34,8 +34,8 @@
     <body style="margin:10px 0 15px 0;" onload="dynvar();">
         <div style="border-bottom:1px solid #eee;color:#333;font-family:Lato,sans-serif;font-size:12px;height:70px;position:relative;overflow: hidden;">
             <div id="partner_logo" style="float:left;padding:0 5px 0 4px;">
-              <img alt="DPB" src="lib/img/USAID-Identity_reduce.png" style="height:40px;margin-right:5px;" />
-              <img alt="DPB" src="lib/img/immap.jpg" style="height:45px;margin-right:5px;" />
+             <!--  <img alt="DPB" src="lib/img/USAID-Identity_reduce.png" style="height:40px;margin-right:5px;" /> -->
+              <img alt="DPB" src="images/ANMDMA.jpg" style="height:45px;margin-right:5px;" />
             </div>
             <div style=";margin:0px 3px 3px 3px;text-align:right;">
               <strong id="title" style="unicode-bidi: plaintext;">{cust_title}</strong><br />
