replace asdc domain name (asdc.immap.org) with andma public ip (18.196.236.51)

--- a/geonode/launch/index.html
+++ b/geonode/launch/index.html
@@ -101,28 +101,28 @@
 
           <!-- <div style="height:40px;"></div> -->
 <!--           <h5 style="padding-bottom:5px;">in partnership with</h5>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/nasa.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/usgs.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/nasa.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/usgs.png"/>
           <img width="64px;" src="imgs/noa.png"/>
           <img width="64px;" src="imgs/wmo.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/oak.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/cso.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/andma.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/maryland.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/japan.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/jrc.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/nato.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/wfp.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/fao.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/who.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/ocha.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/iom.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/moia.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/moph.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/mrrd.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/agcho.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/dacaar.png"/>
-          <img width="128px;" src="http://asdc.immap.org/static/lib/foto/osm.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/oak.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/cso.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/andma.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/maryland.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/japan.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/jrc.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/nato.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/wfp.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/fao.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/who.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/ocha.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/iom.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/moia.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/moph.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/mrrd.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/agcho.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/dacaar.png"/>
+          <img width="128px;" src="http://18.196.236.51/static/lib/foto/osm.png"/>
 -->
         </div>
       </div>
